# vetmed-autograding

./: CMakeLists.txt  config.toml
scripts/: experiment.rb  grade_dists.rb
src/: active_l2r.cpp  active_l2r_assign.cpp  stats.cpp
